# bazel-experiments

pipeline/: BUILD.bazel  MODULE.bazel  README.md  pyproject.toml  python-requirements.txt
pipeline/example/: BUILD.bazel  main.c  main.h  main2.c
pipeline/example/pipeline/: BUILD.bazel  defs.bzl  sign.py
pipeline/rules/: pipeline.bzl
pipeline/toolchain/: BUILD.bazel
pipeline2/: MODULE.bazel  README.md
pipeline2/example/: BUILD.bazel  README.md  dep.h  main.c  main.h  main2.c
pipeline2/example/pipeline/: BUILD.bazel  defs.bzl  sign.py
pipeline2/rules/pipeline/: BUILD.bazel  pipeline.bzl
